Use travis to check all links

--- a/resources.tex
+++ b/resources.tex
@@ -6,7 +6,7 @@ It makes sense at this point (if not earlier), to discuss what language resource
 
 For digital vitalisation, \citet{kornai2015new} proposes working on a pyramid approach: first build a corpus with active and engaged speakers, then l10n and i18n support; then word-level tooling such as spell checkers and morphological analysers; phrase and sentence level tooling such as parsers; and finally speech and character recognition and machine translation. This, in general, follows how most language development progresses. However, a finder grained understanding of the tools would be illuminating. While an exposition of all possible natural language processing tools is beyond the scope of this thesis, it is worth going into some depth about some of them.
 
-It is worth noting here that there are different groups which work on each of the stages of language development. Abstractly, these could be defined as language communities and linguists, and the fields of computational linguistics and natural language processing (NLP). The first group are those - often not computational linguists by training or NLP researchers - who want their own language or the language they are studying to exist digitally and in some form. The initial step is generally to adopt any language script, whether  pre\"{e}xisting or ready-made for the language by linguists (for examples of this, see the Endangered Alphabets Project\footnote{\href{http://endangeredalphabets.com/}{http://endangeredalphabets.com/. \last{May~2}}}) into Unicode, a standard for consistent character representation.\footnote{\href{https://unicode.org/}{https://unicode.org/. \last{May~2}}} There are linguistic research groups that focus on this problem; for instance, the Script Encoding Initiative at Berkeley.\footnote{\href{http://linguistics.berkeley.edu/sei/index.html}{http://linguistics.berkeley.edu/sei/index.html. \last{May~2}}}
+It is worth noting here that there are different groups which work on each of the stages of language development. Abstractly, these could be defined as language communities and linguists, and the fields of computational linguistics and natural language processing (NLP). The first group are those - often not computational linguists by training or NLP researchers - who want their own language or the language they are studying to exist digitally and in some form. The initial step is generally to adopt any language script, whether  pre\"{e}xisting or ready-made for the language by linguists (for examples of this, see the Endangered Alphabets Project\footnote{\href{http://www.endangeredalphabets.com/}{http://www.endangeredalphabets.com/. \last{May~2}}}) into Unicode, a standard for consistent character representation.\footnote{\href{https://unicode.org/}{https://unicode.org/. \last{May~2}}} There are linguistic research groups that focus on this problem; for instance, the Script Encoding Initiative at Berkeley.\footnote{\href{http://linguistics.berkeley.edu/sei/index.html}{http://linguistics.berkeley.edu/sei/index.html. \last{May~2}}}
 
 Some of the people involved in this process may be computational linguists. \citet{bender2016linguistic} makes a distinction between the fields of computational linguistics and NLP: "computational linguistics is used to describe research interested in answering linguistic questions using computational methodology, while natural language processing describes research on automatic processing of human language for practical applications." It should be clear here that computational linguistics is a subfield of linguistics, and that the two are not always in sync, as for instance \citet{kay1997proper} points out when discussing improving machine translation (ML) by using informed linguists. \citet{bender2010grand, bender2016linguistic} goes further, suggesting that understanding language typology can drastically help with multilingual NLP. Many experts in NLP would not consider themselves computational linguists, but developers, just as many language developers would not consider themselves linguists. While navigating the field or looking at resources, it is important to keep these distinctions in mind, as they inform narratives concerning resource generation, scope, and efforts.
 
@@ -40,7 +40,7 @@ I've already mentioned that Cr\'ubad\'an \citep{scannell2007crubadan} is a good 
 
 \end{itemize}
 
-There are other resources: the CLARIN Virtual Language Observatory\footnote{\href{https://vlo.clarin.eu}{https://vlo.clarin.eu}. \last{May~2}}, the Linguistic Data Consortium at UPenn,\footnote{\href{https://www.ldc.upenn.edu/}{https://www.ldc.upenn.edu/}. \last{May~2}} the ELRA,\footnote{\href{http://catalog.elra.info}{http://catalog.elra.info}. \last{May~2}} META-SHARE,\footnote{\href{http://www.meta-share.eu/}{http://www.meta-share.eu/}. \last{May~2}} the Association for Computational Linguistics' Wiki,\footnote{\href{https://aclweb.org/aclwiki}{https://aclweb.org/aclwiki}. \last{May~2}} the NICT Universal Catalogue,\footnote{\href{https://www.nict.go.jp/index.html}{https://www.nict.go.jp/index.html}. \last{May~2}} LT World\footnote{\href{http://www.lt-world.org/}{http://www.lt-world.org/}. \last{May~2}} and so on. Providing an exhausting list would be exhausting - more pertinently, now that it is clear that there are resources, what ones are relevant to low resource languages?
+There are other resources: the CLARIN Virtual Language Observatory\footnote{\href{https://vlo.clarin.eu}{https://vlo.clarin.eu}. \last{May~2}}, the Linguistic Data Consortium at UPenn,\footnote{\href{https://www.ldc.upenn.edu/}{https://www.ldc.upenn.edu/}. \last{May~2}} the ELRA,\footnote{\href{http://catalog.elra.info/en-us/}{http://catalog.elra.info/en-us/}. \last{May~2}} META-SHARE,\footnote{\href{http://www.meta-share.org/}{http://www.meta-share.org/}. \last{May~2}} the Association for Computational Linguistics' Wiki,\footnote{\href{https://aclweb.org/aclwiki/Main_Page}{https://aclweb.org/aclwiki/Main_Page}. \last{May~2}} the NICT Universal Catalogue,\footnote{\href{https://www.nict.go.jp/index.html}{https://www.nict.go.jp/index.html}. \last{May~2}} LT World\footnote{\href{http://www.lt-world.org/}{http://www.lt-world.org/}. \last{May~2}} and so on. Providing an exhausting list would be exhausting - more pertinently, now that it is clear that there are resources, what ones are relevant to low resource languages?
 
 \subsection{BLARK and LRE maps}
 \label{subsec:blark-and-lre-maps}
@@ -133,8 +133,8 @@ As in Section~\ref{subsubsec:response}, covering all of the potential issues wit
 
 % IARPA and DARPA both are involved with low resource languages and both of them may have their own institutional values that are probably at ends with independent researchers, commercial consumers, and language communities. Does working on sparse data openly bring along with it ethical or moral concerns; if so, how can these be adequately explained, breached, and talked about? How can they be worked around or be part of the conversation? Note that DARPA and the like also use humanitarian reasons as their primary stated aim for work on sparse languages, which may be contrary to their military needs. There is already an extensive literature on moral uses of data -- I could summarize that, and apply it specifically to low resource languages, which is something I do not think has yet been published.
 
-% Darpa: http://www.darpa.mil/program/low-resource-languages-for-emergent-incidents
-% IARPA: http://www.iarpa.gov/index.php/research-programs/babel
+% Darpa: https://www.darpa.mil/program/low-resource-languages-for-emergent-incidents
+% IARPA: https://www.iarpa.gov/index.php/research-programs/babel
 
 % - Institutional bottleneck
 % - Linguistic colonialism
