--- a/case-studies.tex
+++ b/case-studies.tex
@@ -29,7 +29,7 @@ The Cr\'ubad\'an corpus was used to create an open source Hunspell spellchecker\
 
  More complicated, higher level technology also exists. Previous academic work on Gaelic text-to-speech systems (TTS) stretches back at least 20 years; a diphone text-to-speech system for Gaelic was developed, for instance, in 1997, by \citet{wolters1997diphone}, although that is not open source. Today, there is a proprietary synthetic TTS system called Ceitidh\footnote{\href{https://www.cereproc.com/en/CereProc_Gaelic_Synthetic_Voice_Ceitidh}{https://www.cereproc.com/en/CereProc\_Gaelic\_Synthetic\_Voice\_Ceitidh}. \last{April~27}} (pronounced 'Katie'), created by a private Gaelic company together with funding from the Scottish Government and the B\`ord na G\`aidghlig. Although Ceitidh is available to developers and students at a reduced or free fee, it is not entirely open source. There are almost no open source sound resources. The main reason is that there is no overall quality assurance for Gaelic sound uploaded online. For large languages, this is not a problem; however, for smaller languages, the size of the corpus means that much of the content may come from only a few sources, none of which may be ideal. This issue may involve general lack of relevance of sound files, or poor quality recordings, or any dialect or non-mainstream features slipping in. Ceitidh was based on original audio files from Kirsteen MacDonald (in Gaelic, Kirsteen NicDh\`{o}mhnaill), some of whose content (while not vetted by an independent linguist) are available on LearnGaelic.scot\footnote{\href{https://learngaelic.scot/}{https://learngaelic.scot/}. \last{April~27}}, which could be hypothetically used to build an open source TTS system. However, quality assurance would be an arduous step.
 
-Navigating resources to identify what is open source and what isn't is difficult. As mentioned in Section~\ref{subsec:where-is-open-source-code}, one of the OSI's definitions for open source was that it be well publicised. This cannot be said to be the case for coding resources for Gaelic; there is no central location for viewing tools. The LRE Map has no Gaelic resources, although a POS Tagger, two corpora, a tokenizer, and Babouk corpus tool resource are mentioned for Irish.\footnote{\href{http://www.resourcebook.eu/searchll.php}{http://www.resourcebook.eu/searchll.php}. \last{April~27}} Linghub returns 30 entries - not many, considering it is an aggregator.\footnote{\href{http://linghub.org/search/?offset=20&query=Gaelic}{http://linghub.org/search/?offset=20\&query=Gaelic}. \last{April~27}} GitHub returns 62 repositories that mention Gaelic\footnote{\href{https://github.com/search?q=gaelic}{https://github.com/search?q=gaelic}. \last{April~27}}, although it is unclear if these are for Irish.
+Navigating resources to identify what is open source and what isn't is difficult. As mentioned in Section~\ref{subsec:where-is-open-source-code}, one of the OSI's definitions for open source was that it be well publicised. This cannot be said to be the case for coding resources for Gaelic; there is no central location for viewing tools. The LRE Map has no Gaelic resources, although a POS Tagger, two corpora, a tokenizer, and Babouk corpus tool resource are mentioned for Irish.\footnote{\href{http://www.resourcebook.eu/searchll.php}{http://www.resourcebook.eu/searchll.php}. \last{April~27}} Linghub returns 30 entries - not many, considering it is an aggregator.\footnote{\href{http://linghub.org/search/?query=Gaelic}{http://linghub.org/search/?query=Gaelic}. \last{April~27}} GitHub returns 62 repositories that mention Gaelic\footnote{\href{https://github.com/search?q=gaelic}{https://github.com/search?q=gaelic}. \last{April~27}}, although it is unclear if these are for Irish.
 
 The best resource is arguably Kornai's lab page\footnote{\href{https://hlt.bme.hu/en/dld/language/4656}{https://hlt.bme.hu/en/dld/language/4656}. \last{April~27}} (again, in development). While not linking directly, it does give some information. It notes that there are: several language packs at the OS level for Ubuntu and Windows input, but not one for Mac, probably because Gaelic uses the Roman alphabet and a UK keyboard suffices for most needs;\footnote{I use the US International Keyboard with OSX to type Gaelic accents, myself, and have never needed another keyboard layout for this} a large Wikipedia; a Hunspell checker; OLAC texts (with marginally out of date numbers); a large Cr\'ubad\'an corpus (1,541,302 words and 17,308 documents), as well as a large Indigenous Tweets corpus with half a million words; and general coverage in Omniglot,\footnote{\href{http://omniglot.com/writing/gaelic.htm}{http://omniglot.com/writing/gaelic.htm}. \last{April~27}} bible.org,\footnote{\href{https://bible.org/}{https://bible.org/}. \last{April~27}} Panlex,\footnote{\href{https://panlex.org/}{https://panlex.org/}. \last{April~27}} and the Leipzig corpora \citep{goldhahn2012building}.\footnote{\href{http://wortschatz.uni-leipzig.de/en/download/}{http://wortschatz.uni-leipzig.de/en/download/}. \last{April~27}} Some of the stats are dubious. For instance, 15k wikipedia users seems odd for a language where there a total population of 30k literate speakers; and it is in WALS, quite clearly. However, in general, this gives a better overview than any other source.
 
@@ -59,7 +59,7 @@ All of the Naskapi speak their own language regularly, in all contexts - excepti
 \subsubsection{Language Vitality Status}
 \label{sec:naskapi-vitality-status}.
 
-\citet{lewis2009ethnologue} classifies Naskapi as Level 4 (educational), and notes that "Literacy rate in L1: Western Naskapi: 50\%. Literacy rate in L2: 50\%. Ongoing community language program in Western Naskapi. All children through in kindergarten through grade 6 can read and write in the language (2017 N. Jancewicz). Taught in primary schools in Western Naskapi. Dictionary. Grammar. NT: 2007. "\footnote{\href{https://www.ethnologue.com/language/nsk }{https://www.ethnologue.com/language/nsk }. \last{April~27}} UNESCO defines it as {\it vulnerable}.\footnote{\href{http://www.unesco.org/culture/languages-atlas/en/atlasmap/language-id-2354.html}{http://www.unesco.org/culture/languages-atlas/en/atlasmap/language-id-2354.html}. \last{April~27}} \citepos{kornai2013digital} digital vitality index awkwardly declares it to be {\it dead}.\footnote{\href{https://hlt.bme.hu/en/dld/language/5651}{https://hlt.bme.hu/en/dld/language/5651}. \last{April~27}} Naskapi does not appear at all on the Endangered Languages Project.
+\citet{lewis2009ethnologue} classifies Naskapi as Level 4 (educational), and notes that "Literacy rate in L1: Western Naskapi: 50\%. Literacy rate in L2: 50\%. Ongoing community language program in Western Naskapi. All children through in kindergarten through grade 6 can read and write in the language (2017 N. Jancewicz). Taught in primary schools in Western Naskapi. Dictionary. Grammar. NT: 2007. "\footnote{\href{https://www.ethnologue.com/language/nsk }{https://www.ethnologue.com/language/nsk }. \last{April~27}} UNESCO defines it as {\it vulnerable}.\footnote{\href{http://www.unesco.org/languages-atlas/en/atlasmap/language-id-2354.html}{http://www.unesco.org/languages-atlas/en/atlasmap/language-id-2354.html}. \last{April~27}} \citepos{kornai2013digital} digital vitality index awkwardly declares it to be {\it dead}.\footnote{\href{https://hlt.bme.hu/en/dld/language/5651}{https://hlt.bme.hu/en/dld/language/5651}. \last{April~27}} Naskapi does not appear at all on the Endangered Languages Project.
 
 The {\it dead} terminology used to describe Naskapi by \citepos{kornai2013digital} metric reflects the metric's being only applied to online corpora (which is minimal), and, regardless of the insensitivity of the nomenclature, it does have some merit here. When looking at the resources listed on the resource, there are no language packs for software, no Wikipedia articles, no Hunspell, no primary texts listed in OLAC, only 2415 words listed in the Cr\'ubad\'an corpus, no Indigenous tweets, no Swadesh lists, and only a brief mention in Panlex translations (90 words), and in Omniglot. Once again the data may not be perfect - this source lists the EGIDS rating at Level 5 (which I would disagree with, placing it in back in Level 4, as "The language is in vigorous use, with standardisation and literature being sustained through a widespread system of institutionally supported education.")
 
